src/components/MainLayout/style/index.less
.main {
  &-layout {
    position: relative;
    height: 100%;
  }

  &-sider {
    .logo {
      height: 32px;
      background: #333;
      border-radius: 6px;
      margin: 16px;
    }
  }

  &-header {
    display: flex;
    align-items: center;
    background: #fff !important;
    padding: 0 16px !important;

    &-avatar {
      cursor: pointer;
    }

    .fill {
      flex: 1 1 auto;
    }
  }

  &-container {
    margin: 0 16px;

    .ant-breadcrumb-link > .anticon + a {
      margin-left: 4px;
    }
  }

  &-content-wrapper {
    position: relative;
    padding: 24px;
    background: #fff;
    min-height: 360px;
  }

  &-breadcrumb {
    margin: 12px 0;
  }
}

